# nexum-kit

./: .gitignore  Cargo.toml  FUNDING.json  Justfile  LICENSE  MIGRATION_PLAN.md  NOTICE  README.md  flake.nix
.github/: FUNDING.yml
crates/alloy-eip1193/: Cargo.toml  LICENSE-MIT  README.md
crates/alloy-eip1193/src/: chain.rs  error.rs  lib.rs  provider.rs  request.rs  signer.rs  transport.rs  wallet.rs
crates/alloy-eip1193/src/ext/: eip1193.rs  mod.rs
crates/create-leptos-nexumkit/: Cargo.toml
crates/create-leptos-nexumkit/src/: main.rs
crates/create-leptos-rainbowkit/: Cargo.toml
crates/create-leptos-rainbowkit/src/: main.rs
crates/leptos-rainbow-button/: Cargo.toml
crates/leptos-rainbow-button/src/: lib.rs
crates/leptos-rainbowkit/: Cargo.toml
crates/leptos-rainbowkit/src/: lib.rs  prelude.rs
crates/leptos-rainbowkit/src/components/: connect_button.rs  mod.rs  provider.rs
crates/leptos-rainbowkit/src/components/modals/: account.rs  connect.rs  mod.rs
crates/leptos-rainbowkit/src/components/primitives/: box_component.rs  dialog.rs  mod.rs  text.rs
crates/leptos-rainbowkit/src/hooks/: mod.rs  use_wallet.rs
crates/leptos-rainbowkit/src/i18n/: mod.rs
crates/leptos-rainbowkit/src/i18n/locales/: en_us.rs  mod.rs
crates/leptos-rainbowkit/src/provider/: client.rs  eip1193.rs  eip1193_signer.rs  mod.rs  request.rs
crates/leptos-rainbowkit/src/state/: connection.rs  mod.rs  modal.rs  transaction.rs
crates/leptos-rainbowkit/src/theme/: dark.rs  light.rs  midnight.rs  mod.rs  provider.rs  types.rs
crates/leptos-rainbowkit/src/utils/: format.rs  mod.rs
crates/leptos-rainbowkit/src/wallets/: connector.rs  mod.rs
crates/leptos-rainbowkit/src/wallets/connectors/: metamask.rs
crates/leptos-rainbowkit/styles/: tailwind.css
crates/nexum-button/: Cargo.toml
crates/nexum-button/src/: lib.rs
crates/nexum-kit/: Cargo.toml
crates/nexum-kit/src/: lib.rs  prelude.rs
crates/nexum-kit/src/components/: connect_button.rs  mod.rs  provider.rs
crates/nexum-kit/src/components/modals/: account.rs  connect.rs
crates/nexum-kit/src/components/primitives/: box_component.rs  dialog.rs  mod.rs  qr_code.rs  text.rs
crates/nexum-kit/src/hooks/: mod.rs  use_balance.rs  use_ens.rs  use_wallet.rs
crates/nexum-kit/src/i18n/: mod.rs
crates/nexum-kit/src/i18n/locales/: en_us.rs  es_es.rs  fr_fr.rs
crates/nexum-kit/src/state/: connection.rs  mod.rs  transaction.rs
crates/nexum-kit/src/theme/: dark.rs  light.rs  mod.rs  types.rs
crates/nexum-kit/src/utils/: format.rs  mod.rs
crates/nexum-kit/src/wallets/: connector.rs  eip6963.rs  wallet.rs
crates/nexum-kit/src/wallets/connectors/: metamask.rs  mod.rs
crates/nexum-kit/styles/: tailwind.css
examples/basic/: Cargo.toml  Trunk.toml  index.html
examples/basic/src/: main.rs
