[package]
name = "alloy-eip1193"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "EIP-1193 provider and signer implementation for Alloy (WASM-only)"
keywords = ["ethereum", "eip1193", "alloy", "wasm", "browser-wallet"]
categories = ["wasm", "web-programming", "cryptography::cryptocurrencies"]

[dependencies]
alloy = { workspace = true, features = ["provider-http", "signer-local", "rpc-types", "network", "contract", "eip712", "dyn-abi", "reqwest"] }
alloy-core.workspace = true
alloy-json-rpc.workspace = true
alloy-chains = "0.2"
tower.workspace = true
serde.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
web-sys = { workspace = true, features = ["Window"] }
js-sys.workspace = true
log.workspace = true
wasm-bindgen-futures = "0.4.56"
serde-wasm-bindgen = "0.6.5"
async-trait = "0.1"
getrandom = { workspace = true }
url = "2.5"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
futures-util = "0.3"
futures-utils-wasm = "0.1"
thiserror = "2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
