[package]
name = "leptos-rainbow-button"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Standalone rainbow button component for Leptos"

[dependencies]
leptos.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
