[package]
name = "leptos-rainbowkit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Leptos component library for connecting Ethereum wallets (WASM-only)"
keywords = ["leptos", "ethereum", "web3", "wallet", "blockchain"]
categories = ["wasm", "web-programming", "gui"]

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
alloy = { workspace = true, features = ["provider-http", "reqwest", "signer-local", "rpc-types", "network", "contract", "eip712", "dyn-abi"] }
alloy-core.workspace = true
alloy-json-rpc.workspace = true
tower.workspace = true
serde.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
web-sys = { workspace = true, features = [
  "Window",
  "Document",
  "Storage",
  "EventTarget",
  "MessageEvent",
  "CustomEvent",
  "Crypto",
  "HtmlElement",
  "Element",
  "DomTokenList",
] }
js-sys.workspace = true
console_log.workspace = true
log.workspace = true
console_error_panic_hook.workspace = true
qrcode.workspace = true
getrandom.workspace = true
urlencoding = "2.1.3"
wasm-bindgen-futures = "0.4.56"
serde-wasm-bindgen = "0.6.5"
url = "2.5.7"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json"] }

[features]
default = []
ssr = []

[lib]
crate-type = ["cdylib", "rlib"]
