[package]
name = "nexum-button"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "AGPL-3.0-or-later"
repository.workspace = true
description = "Standalone nexum button component for Leptos"

[dependencies]
leptos.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
