[package]
name = "nexum-kit-example"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
nexum-kit = { path = "../../crates/nexum-kit" }
alloy.workspace = true
alloy-eip1193 = { path = "../../crates/alloy-eip1193" }
console_log.workspace = true
log.workspace = true
console_error_panic_hook.workspace = true
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
gloo-timers = { version = "0.3", features = ["futures"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
